2023-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-va-arg-5.c:
	  Disable Test for GCC up to 11, since it still fails on x86 hosts for that version.
	* support/regression/cases/Makefile.in:
	  Disable Test that tests for GCC implementation-defined behaviour (GIMPLE memory model).

2023-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c: Improve pointer aliasing handling,
	  minor reduction in memory leakage
	* support/regression/tests/bug-2957.c,
	  support/regression/tests/gcc-torture-execute-pr20466-1.c:
	  Reenable tests

2023-01-08 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCCmain.c:
	  Add "TD-" to the version string of treedec-less builds.

2023-01-08 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Amend claims concerning intrinsic address space support.

2023-01-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  support/regression/tests/bug-3504.c:
	  Fix bug #3504.

2022-12-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClabel.c (labelUnreach, deleteIfx),
	  src/SDCCcse.c (ifxOptimize): disable conditional flow change and
	  unreachable code warnings within function inlining
	* src/SDCClabel.c (labelJumptable,iCodeLabelOptimize),
	  src/SDCCcse.c (cseBBlock): optimize jump tables
	* src/SDCClabel.c (labelUnreach): clean up dead code def/use info

2022-12-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/cpp/gcc/configure.ac,
	  support/cpp/gcc/configure: disable some assembler and
	  target tests unneeded for the preprocessor

2022-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix bug #3500.
	* src/stm8/gen.c,
	  src/pdk/gen.c:
	  Fix bug #3515.

2022-12-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-941021-1.c:
	  Remove a test that apparently relies on implementation-defined floating-point rounding behaviour.
